--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
             <a href="#">Contact</a>
         </nav>
     </header>
-    <article class="container">
+    <article class="container hero">
         <div class="text">
             <h1>Header or smth idk</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nam tempore distinctio ipsam praesentium reiciendis!</p>
-            <button>Click this</button>
-            <button class="button2">Or this</button>
+            <div>
+                <button>Click this</button>
+                <button class="button2">Or this</button>
+            </div>
         </div>
-        <div class="visual">    </div>
+        <div class="visual"></div>
     </article>
     <aside class="container sidebar">
         <div>        
@@ -47,7 +49,7 @@
         <h1>Article Area</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, nulla consequuntur inventore assumenda accusamus explicabo!</p>
         <div class="holder">
-            <div class="card">
+            <div class="card" id="card1">
                 <h3>Card #</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, enim.</p>
                 <div class="link"><a href="#">Learn More</a></div>
@@ -81,7 +83,7 @@
     </main>
     <article class="container" id="action">
         <h3>This is the call to action bar</h3>
-        <div>
+        <div class="buttons">
             <button>Create Account</button>
             <button class="button2">Don't create account</button>
         </div>
@@ -91,7 +93,7 @@
             <h3>Footer</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, voluptates?</p>
         </div>
-        <div class="footer-list">
+        <div class="footer-list" id="list1">
             <h3>Company</h3>
             <a href="#">About</a>
             <a href="#">Careers</a>
